<?xml version="1.0" encoding="utf-8"?>
<resources>


    <!-- mark favourite message -->
    <string name="successful">Successfully marked as favourites</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <string name="api_key">AIzaSyBu-nm4iqab7_HQBvWYO3ndYFz4cm_3cCo</string>
    <string name="app_name">PNL</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">142068919772209</string>
    <string name="fb_login_protocol_scheme">fb142068919772209</string>


    <!-- Error Messages -->
    <string name="error_passwords_do_not_match">Passwords do not match.</string>
    <string name="error_could_not_connect">Could not connect to server. Please try again later.</string>
    <string name="error_cannot_create_account">Account already exists!</string>
    <string name="error_cannot_sign_in">Please provide correct Email and Password</string>
    <string name="crash_toast_text">Sorry for inconvenience, we will get this issue fixed!</string>
    <string name="msg_connection_failed">Error! Connection to server failed.</string>
    <string name="msg_connection_error">Please check your internet connection</string>

    <!-- Date Time -->
    <string name="common.months">months</string>
    <string name="common.weeks">weeks</string>
    <string name="common.days">days</string>
    <string name="common.hrs">hrs</string>
    <string name="common.mins">mins</string>
    <string name="common.secs">secs</string>
    <string name="common.ago">ago</string>

    <!-- AnyTextView -->
    <string name="typeface_not_found">Typeface %$1 not found, or could not be loaded.
        Showing default typeface.</string>
    <string name="app">AnyTextView</string>
    <string name="assets_fonts_folder">fonts/</string>
    <string name="txt_enter_phone_no">Enter Phone No.</string>
    <string name="txt_register_text">Verificaion process is required to verify the phone no.</string>
    <string name="message_quit">Are you sure you want to exit?</string>
    <string name="message_wait">Please wait while data is loading.</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="click_here">  Click Here</string>
    <string name="imgdesc_signup">Sign Up</string>
    <string name="imgdesc_signin">Sign In</string>
    <string name="back_to_login"><u>Back to Login</u></string>
    <string name="remember_me">remember me</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="search_hint">Search Ads, User or Category</string>
    <string name="password_sent">Your password will be sent to your \nemail address</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="reason_for_rejection">REASON</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="via_email">Via Email</string>
    <string name="via_sms">Via SMS</string>
    <string name="tell_a_friend">TELL A FRIEND</string>
    <string name="contact_email">contact@voltas.com</string>
    <string name="contact_phone">5555 555 555</string>
    <string name="enter_text">Enter Text</string>
    <string name="you_paid">YOU PAID</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="tap_to_rate">TAP A STAR TO RATE DRIVER</string>
    <string name="contact_address">Columbus College of Arts, New York</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever sinc
        e the 1500s, when an unknown printer took a galley of type and scrambled it t
        o make a type specimen book. It has survived not only five centuries, but
         also the leap into electronic typesetting, remaining essentially unchanged
         . It was popularised in the 1960s with the release of Letraset sheets cont
         aining Lorem Ipsum passages, and more recently with desktop publishing so
         ftware like Aldus PageMaker including versions of Lorem Ipsum.</string>

    <string name="small_ipsum">Lorem Ipsum is simply dummy text of the printing . Lorem Ipsum has been the industrys standard dummy text ever sinc
        e the 1500s.</string>
    <string name="this_is_login_fragment">This is Login Fragment</string>

    <string name="default_hint_text">Where are you going?</string>

    <string name="connection_lost">No Internet Found</string>
    <string name="Roboto">Roboto-Regular.ttf</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="or">OR</string>
    <string name="log_in_with_facebook">Log In with Facebook</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_now">Signup</string>
    <string name="Roboto_bold">Roboto-Bold.ttf</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sing_up_with_facebook">Sign Up with Facebook</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_term_message"><![CDATA[By registering you agree to PNL Terms & Conditions]]></string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="enter_password">Password Field cannot be Empty</string>
    <string name="passwordLength">Password should be more then 6 characters</string>
    <string name="does_not_match">confirm password does not match</string>
    <string name="enter_name">Enter Name</string>
    <string name="comfirm_password_error">Passwords did not match</string>
    <string name="sign_up_head">Sign Up</string>
    <string name="notification">Notifications</string>
    <string name="favourites">Favorites</string>
    <string name="review_history">Review History</string>
    <string name="logout">Logout</string>
    <string name="companies">Companies</string>
    <string name="most_popular">Most Popular</string>
    <string name="services">Services</string>

    <string name="view_all_services">View All Services</string>
    <string name="hospital">Hospital</string>
    <string name="restaurant">Restaurant</string>
    <string name="bakery">Bakery</string>
    <string name="spa">Spa</string>
    <string name="cafe">Cafe</string>
    <string name="casino">Casino</string>
    <string name="construction">Construction</string>
    <string name="store">Store</string>
    <string name="law">Law</string>
    <string name="traveling">Traveling</string>
    <string name="finance">Finance</string>
    <string name="pets">Pets</string>

    <string name="no_data">No Data to Show</string>
    <string name="search">Search</string>


    <string name="write_here">Write here</string>
    <string name="submit">Submit</string>
    <string name="travel_company">Travel Company</string>
    <string name="address_details">Address details</string>
    <string name="mark_favourites">Mark Favorites</string>
    <string name="conatct_details">Contact details</string>
    <string name="share">Share</string>
    <string name="website">Website</string>
    <string name="_4_5">4.5</string>
    <string name="write_a_review">Write a Review</string>
    <string name="reviews">Reviews</string>
    <string name="garry_smith">Garry Smith</string>
    <string name="view_all_posts">View All Posts</string>
    <string name="beta">Will be implemented in beta</string>
    <string name="favorites">Favorites</string>
    <string name="rate_review">Rate and Review</string>
    <string name="travel">Travel Company</string>
    <string name="notifications">Notifications</string>
    <string name="reviews_">Reviews</string>
    <string name="sorting_by">Sorting By</string>
    <string name="change_password_">Change Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password_">New Password</string>
    <string name="old_password_">Old Password</string>
    <string name="update">Update</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search_company">Search Company</string>
    <string name="search_category">Search Category</string>
    <string name="profile_update_message">Profile Updated</string>
    <string name="enter_phone">Enter Phone Number</string>
    <string name="numberLength">Number should be more than 10</string>
    <string name="cityLength">City length should be more than 1</string>
    <string name="city_error">Enter City</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="turn_notification_on_off">Turn Notification On/Off</string>
    <string name="forgot_password_message">Your Password will be \n delivered at the following email</string>
    <string name="send">Send</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="re_enter_password_message">Enter your new Password here</string>
    <string name="confrim">Confirm</string>
    <string name="please_wait">Please Wait...</string>
    <string name="no_review">No Review Found</string>
    <string name="server_response_error">No Response From Server</string>
    <string name="share_via">Share Via</string>
    <string name="good">Good</string>
    <string name="full_name">Full Name</string>

    <string name="phone">Phone</string>
    <string name="city">City</string>
    <string name="poor">Poor</string>
    <string name="excellent">Excellent</string>
    <integer name="key_item_at_position">512</integer>
    <string name="same_password_error">New password should not be same as previous password</string>
    <string name="user_not_exist_error">User not exist.Please Signup to Login</string>
    <string name="clear">Clear</string>
    <string name="clear_notification">Clear Notifications</string>
    <string name="clear_message">Are you sure you want to clear all notifications ?</string>
    <array name="sortedalphabet">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </array>

</resources>