<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/bg"
              android:orientation="vertical"
              android:paddingEnd="@dimen/x50"
              android:paddingStart="@dimen/x50">

    <com.ingic.pnl.ui.views.AnyTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x70"
        android:gravity="center"
        android:text="@string/forgot_password_message"
        android:textColor="@color/white"
        android:textSize="@dimen/x14"
        android:textStyle="bold"
        app:typeface="@string/Roboto_bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:layout_marginTop="@dimen/x50"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/x20"
            android:layout_height="@dimen/x20"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/x10"
            android:contentDescription=""
            android:src="@drawable/email"
            tools:ignore="ContentDescription"/>

        <com.ingic.pnl.ui.views.AnyEditTextView
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/x20"
            android:layout_marginStart="@dimen/x12"
            android:alpha="0.8"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/email_address"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/x15"
            app:typeface="@string/Roboto"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:background="@color/white"/>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:layout_marginTop="@dimen/x20"
        android:background="@drawable/btn_red_drawable"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/white"/>
</LinearLayout>