<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/scrollview_bigdaddy"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/bg"
              android:orientation="vertical"
            android:scrollbars="none"
            android:fillViewport="true"
              android:paddingEnd="@dimen/x50"
              android:paddingStart="@dimen/x50">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/x35"
        android:src="@drawable/logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:layout_marginTop="@dimen/x25"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/x20"
            android:layout_height="@dimen/x20"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/x10"
            android:contentDescription=""
            android:src="@drawable/email"
            tools:ignore="ContentDescription"/>

        <com.ingic.pnl.ui.views.AnyEditTextView
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/x20"
            android:layout_marginStart="@dimen/x12"
            android:alpha="0.8"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/x15"
            app:typeface="@string/Roboto"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:background="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:layout_marginTop="@dimen/x10"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/x20"
            android:layout_height="@dimen/x20"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/x10"
            android:contentDescription=""
            android:src="@drawable/pwd"
            tools:ignore="ContentDescription"/>

        <com.ingic.pnl.ui.views.AnyEditTextView
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/x20"
            android:layout_marginStart="@dimen/x12"
            android:alpha="0.8"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="30"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/x15"
            app:typeface="@string/Roboto"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:background="@color/white"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:layout_marginTop="@dimen/x15"
        android:background="@drawable/btn_red_drawable"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/white"/>

    <com.ingic.pnl.ui.views.AnyTextView
        android:id="@+id/btn_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x15"
        android:gravity="center_horizontal"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        app:typeface="@string/Roboto"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x15"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/x1"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:alpha="0.6"
            android:background="@color/white"/>

        <com.ingic.pnl.ui.views.AnyTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="center_horizontal"
            android:text="@string/or"
            android:textColor="@color/white"
            app:typeface="@string/Roboto"/>

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/x1"
            android:layout_gravity="center_vertical"

            android:layout_weight="1"
            android:alpha="0.6"
            android:background="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x15"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/btn_login_facebook"
            android:layout_width="@dimen/x72"
            android:layout_height="@dimen/x72"
            android:layout_marginEnd="@dimen/x50"
            android:background="@drawable/fb_circle"
            >

            <ImageView
                android:layout_width="@dimen/x25"
                android:layout_height="@dimen/x25"
                android:layout_gravity="center"
                android:contentDescription="@string/sing_up_with_facebook"
                android:src="@drawable/fb"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/btn_login_google"
            android:layout_width="@dimen/x72"
            android:layout_height="@dimen/x72"
            android:background="@drawable/gplus_circle"
            >

            <ImageView
                android:layout_width="@dimen/x25"
                android:layout_height="@dimen/x25"
                android:layout_gravity="center"
                android:contentDescription="@string/sing_up_with_facebook"
                android:src="@drawable/googleplus"/>
        </FrameLayout>
    </LinearLayout>
    <!--  <Button
          android:id="@+id/btn_login_facebook"
          android:layout_width="match_parent"
          android:layout_height="@dimen/x40"
          android:layout_marginTop="@dimen/x20"
          android:background="@drawable/btn_blue_drawable"
          android:text="@string/log_in_with_facebook"
          android:textAllCaps="false"
          android:textColor="@color/white"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x15"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.ingic.pnl.ui.views.AnyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/white"
            app:typeface="@string/Roboto"/>

        <com.ingic.pnl.ui.views.AnyTextView
            android:id="@+id/txt_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x5"
            android:paddingBottom="@dimen/x5"
            android:paddingTop="@dimen/x5"
            android:text="@string/sign_up_now"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:typeface="@string/Roboto_bold"/>


    </LinearLayout>
</LinearLayout>
</ScrollView>