<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/x20"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginRight="@dimen/x20"
        android:layout_weight="0.6">

        <com.ingic.pnl.ui.views.AnyEditTextView
            android:id="@+id/edt_old_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40"
            android:layout_gravity="center_vertical"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/old_password_"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="30"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/x15"
            app:typeface="@string/Roboto" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:alpha="0.3"
            android:layout_marginTop="@dimen/x5"
            android:layout_marginBottom="@dimen/x5"
            android:background="@color/light_grey" />

        <com.ingic.pnl.ui.views.AnyEditTextView
            android:id="@+id/edt_new_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40"
            android:layout_gravity="center_vertical"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/new_password_"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="30"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/x15"
            app:typeface="@string/Roboto" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:alpha="0.3"
            android:layout_marginTop="@dimen/x5"
            android:layout_marginBottom="@dimen/x5"
            android:background="@color/light_grey" />

        <com.ingic.pnl.ui.views.AnyEditTextView
            android:id="@+id/edt_cfm_new_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40"
            android:layout_gravity="center_vertical"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/confirm_new_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="30"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/x15"
            app:typeface="@string/Roboto" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:alpha="0.3"
            android:layout_marginTop="@dimen/x5"
            android:layout_marginBottom="@dimen/x5"
            android:background="@color/light_grey" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:layout_marginTop="@dimen/x20"
        android:layout_marginLeft="@dimen/x40"
        android:layout_marginRight="@dimen/x40"
        android:layout_marginBottom="@dimen/x40"
        android:background="@drawable/btn_red_drawable"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>