<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/company"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/top_shelf"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/btn_popular"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_right_bottom"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/popular"/>

                <com.app.pnl.ui.views.AnyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/most_popular"
                    android:textColor="@color/app_blue"
                    android:textSize="@dimen/x18"
                    app:typeface="@string/Roboto"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_services"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/services"/>

                <com.app.pnl.ui.views.AnyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/services"
                    android:textColor="@color/app_blue"
                    android:textSize="@dimen/x18"
                    app:typeface="@string/Roboto"/>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="true"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:id="@+id/btn_companies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/popular"/>

                <com.app.pnl.ui.views.AnyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/companies"
                    android:textColor="@color/app_blue"
                    android:textSize="@dimen/x18"
                    app:typeface="@string/Roboto"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_favourites"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_top_left"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/favorite1"/>

                <com.app.pnl.ui.views.AnyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favourites"
                    android:textColor="@color/app_blue"
                    android:textSize="@dimen/x18"
                    app:typeface="@string/Roboto"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>