<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/x5"
        android:layout_marginBottom="@dimen/x5"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginRight="@dimen/x20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.ingic.pnl.ui.views.AnyTextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="0.6"
                android:gravity="center_vertical"
                android:text="@string/garry_smith"
                android:textColor="@color/blue_notifications"
                android:textSize="@dimen/x14"
                app:typeface="@string/Roboto" />

            <com.ingic.pnl.ui.views.CustomRatingBar
                android:id="@+id/rb_review"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:maxStars="5"
                app:onlyForDisplay="true"
                android:padding="@dimen/x5"
                app:starPadding="@dimen/x1"
                app:paddingStart="@dimen/x5"
                android:layout_weight="0.2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:layout_gravity="center_horizontal"
            android:weightSum="1">

            <com.ingic.pnl.ui.views.AnyTextView
                android:id="@+id/tv_msg_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x10"
                android:textColor="@color/black"
                android:textSize="@dimen/x12"
                android:text="@string/lorem_ipsum"
                app:typeface="@string/Roboto" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginRight="@dimen/x20"
        android:background="@color/light_grey"
        android:alpha="0.2"/>

</LinearLayout>